CHATS_SIT/force-app/main/default/objects/T_CHATS_CHILD_ENROLLMENT__c.object
<CustomObject>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MuleSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>   
       <fullName>Previous_Enroll_End_Date__c</fullName>
       <description>Previous Enroll End Date</description>
       <encryptionScheme>None</encryptionScheme>
       <label>Previous Enroll End Date</label>
       <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>IsWavierProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWavierProvider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
	<fullName>Case_ownerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Owner Id</label>
    <length>50</length>
    <type>Text</type>
	</fields>
	<fields>
	 <fullName>DTE_BEGIN_EFFV__c</fullName>
    <description>Child Enrollment Begin Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Flag Begin Date</label>
    <type>Date</type>
	</fields>
	
	<fields>
	<fullName>DTE_END_EFFV__c</fullName>
    <description>Child Enrollment End date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Flag End Date</label>
    <type>Date</type>
	</fields>
	<fields>
	<fullName>Enroll_Flag__c</fullName>
    <label>Enrollment Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
	</fields>
    <fields>
    <fullName>Previous_Flag__c</fullName>
    <label>Previous Enrollment Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
	</fields>
    <fields>
        <fullName>Child_Name__c</fullName>
        <formula>IDN_CLIENT__r.NAM_FIRST__c +&apos; &apos;+ IDN_CLIENT__r.NAM_LAST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Name</label>
        <type>Text</type>
    </fields>
	<fields>
	 <fullName>IDN_CLIENT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Id</label>
    <referenceTo>T_SBSD_INDIV__c</referenceTo>
    <relationshipLabel>Child Enrollments</relationshipLabel>
    <relationshipName>Child_Enrollments</relationshipName>
    <type>Lookup</type>
	</fields>
	<fields>
	<fullName>IDN_EXTNL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IDN_EXTNL</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
	</fields>
	<fields>
	<fullName>IDN_PROVR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Id</label>
    <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
    <relationshipLabel>Child Enrollments</relationshipLabel>
    <relationshipName>Child_Enrollments</relationshipName>
    <type>Lookup</type>
	</fields>
    <label>Child Enrollment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>